--- a/amplify.yml
+++ b/amplify.yml
@@ -1,16 +1,19 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - npm install
-    build:
-      commands:
-        - npx next build
-  artifacts:
-    baseDirectory: .next
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
+applications:
+  - name: blogger_sitemap
+  root: /src/app
+  frontend:
+    phases:
+      preBuild:
+        commands:
+          - npm install
+      build:
+        commands:
+          - npx next build
+    artifacts:
+      baseDirectory: .next
+      files:
+        - '**/*'
+    cache:
+      paths:
+        - node_modules/**/*
